Added a std feature flag.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,16 +7,28 @@ on:
 name: CI
 
 jobs:
-  build_and_test:
-    name: Rust project
+  build:
+    name: Cargo Build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
-      - run: RUSTFLAGS="-D warnings" cargo build --verbose
-      - run: cargo test --verbose
+      - run: RUSTFLAGS="-D warnings" cargo build --verbose --no-default-features
+      - run: RUSTFLAGS="-D warnings" cargo build --verbose --no-default-features --features embedded-hal
+      - run: RUSTFLAGS="-D warnings" cargo build --verbose --no-default-features --features std
+      - run: RUSTFLAGS="-D warnings" cargo build --verbose --all-features
+  
+  test:
+    name: Unit Tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+      - run: cargo test --verbose --all-features
 
   clippy_check:
     name: Clippy
@@ -39,26 +51,34 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
-          toolchain: stable
+          toolchain: nightly
           components: rustfmt
-      - run: cargo fmt -- --check
+      - run: cargo +nightly fmt -- --check
 
-  docs:
-    name: docs
+  doc:
+    name: doc
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
-      - run: cargo install cargo-deadlinks
-      - run: cargo doc
-      - run: cargo deadlinks
+      - run: cargo doc --all-features
+
+  rustdoc:
+    name: rustdoc
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: nightly
+      - run: RUSTDOCFLAGS='--cfg docsrs' cargo +nightly rustdoc --all-features
 
   release:
     name: crates.io release
     if: startsWith(github.ref, 'refs/tags/v')
-    needs: [build_and_test, clippy_check, format_check, docs]
+    needs: [build, test, clippy_check, format_check, doc, rustdoc]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
