--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "w5500-ll"
-version = "0.4.0"
+version = "0.5.0"
 authors = ["Alex M. <alexmgit@protonmail.com>"]
 edition = "2018"
 repository = "https://github.com/newAM/w5500-ll-rs"
@@ -19,12 +19,12 @@ std = []
 maintenance = { status = "actively-developed" }
 
 [dependencies.embedded-hal]
-version = "0.2.4"
+version = "~0.2.4"
 optional = true
 
 [dev-dependencies]
-embedded-hal-mock = "0.7"
-version-sync = "0.9.1"
+embedded-hal-mock = "~0.7"
+version-sync = "~0.9.1"
 
 [package.metadata.docs.rs]
 all-features = true
