--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ categories = ["embedded", "hardware-support", "no-std"]
 homepage = "https://github.com/newAM/w5500-ll-rs"
 
 [features]
-default = ["embedded-hal"]
+default = []
 std = []
 
 [badges]
@@ -20,6 +20,10 @@ maintenance = { status = "actively-developed" }
 
 [dependencies.embedded-hal]
 version = "~0.2.4"
+optional = true
+
+[dependencies.defmt]
+version = "~0.1.3"
 optional = true
 
 [dev-dependencies]
