--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Alex M. <alexmgit@protonmail.com>"]
 edition = "2018"
 repository = "https://github.com/newAM/w5500-ll-rs"
 license = "MIT"
-description = "Driver for the Wiznet W5500 internet offload chip."
+description = "Low level driver for the Wiznet W5500 internet offload chip."
 readme = "README.md"
 keywords = ["spi", "driver", "embedded-hal-driver", "W5500", "wiznet"]
 categories = ["embedded", "hardware-support", "no-std"]
