--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "w5500-ll"
 version = "0.9.0"
-authors = ["Alex M. <alexmgit@protonmail.com>"]
+authors = ["Alex Martens <alexmgit@protonmail.com>"]
 edition = "2021"
 rust-version = "1.56"
 repository = "https://github.com/newAM/w5500-ll-rs"
@@ -19,16 +19,16 @@ std = []
 maintenance = { status = "passively-maintained" }
 
 [dependencies.embedded-hal]
-version = "~0.2.4"
+version = "0.2.4"
 optional = true
 
 [dependencies.defmt]
-version = "~0.2"
+version = "0.3"
 optional = true
 
 [dev-dependencies]
-embedded-hal-mock = "~0.8"
-version-sync = "~0.9"
+embedded-hal-mock = "0.8"
+version-sync = "0.9"
 
 [package.metadata.docs.rs]
 all-features = true
