--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "w5500-ll"
 version = "0.10.1"
-authors = ["Alex Martens <alexmgit@protonmail.com>"]
+authors = ["Alex Martens <alex@thinglab.org>"]
 edition = "2021"
 rust-version = "1.56"
 repository = "https://github.com/newAM/w5500-ll-rs"
